Fixed issue with header disappearing on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,13 +54,15 @@ nav ul li {
 	display: inline;
 	width: 50%;
 	padding: 5px 0;
+	padding: 0.5vw 0;
 	margin: 2px 0;
+	margin: 0.2vw 0;
 }
 
 nav a:link {
 	color: DarkViolet;
 	transition: background-color 250ms ease-in, color 250ms ease-in;
-	text-decoration: none; style="margin-right: 0;"
+	text-decoration: none;
 	padding: 0 10px;
 	padding: 0 1vw;
 	border-radius: 5px;
@@ -121,7 +123,7 @@ footer nav a:hover {
 	flex-direction: row;
 	text-align: center;
 	width: 1100px;
-	width: 70%;
+	width: 90%;
 	margin: 0 auto;
 	padding: 10px 0;
 	padding: 0.5vw 0;
